--- a/_11ty/assets/themes/creation_sitee/css/print/sidenotes.css
+++ b/_11ty/assets/themes/creation_sitee/css/print/sidenotes.css
@@ -1,52 +1,49 @@
-.imagenote_wrapper {
-      display: block;
-      width: calc(var(--column-width)  * 3 + var(--gutter) * 2);
-      padding: 0 var(--gutter) 0 1cm;    
-      position: absolute;
-      text-align-last: initial;
-    }
-    .imagenote_wrapper.printright {
-      padding-left: calc(1cm + 1.625cm);
-    }
-    .imagenote_wrapper.printright .note-marker_sideNote{
-      position: absolute;
-      left: 1cm;
-      text-align: right;
-      width: 1.25cm;
-      text-indent: 0;
-    }
-    .imagenote_wrapper.printleft {
-      padding-right: calc(var(--gutter) + 1.625cm);
-    }
-    .imagenote_wrapper.printleft .note-marker_sideNote{
-      position: absolute;
-      right: .5cm;
-      width: 1.25cm;
-      text-indent: 0;
-    }
-    .imagenote {
-      width: 100%;
-      float: none;
-      display: block;
-      margin: 0 0 1rem;
-      font-size: var(--font-caption-size);
-    }
-    .imagenote > * {
-      display: block;
-    }
-    .note-marker_sideNote,
-    .note-call_sideNote {
-      letter-spacing: 0.05em;
-      font-weight: bold;
-    }
-    
+.sidenote-container {
+  font-family: var(--footnote);
+  font-size: var(--footnote-size);
+  line-height: var(--footnote-line-height);
+  font-weight: var(--footnote-weight);
+  /* color: var(--font-note-color); */
+  display:flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  min-height:100%;
   
-    .note-call_sideNote.textNote {
-      font-size: 65%;
-      line-height: 1;
-      top: -0.5em;
-      position: relative;
-      vertical-align: baseline;
-      font-weight: normal;
-      color: red;
-    }
+}
+
+
+.pagedjs_left_page .sidenote-container {
+    padding-left: 4.2mm;
+    padding-right: 25.5mm;
+}
+.pagedjs_right_page .sidenote-container {
+    padding-left: 25.5mm;
+    padding-right: 4.2mm;
+}
+
+.sidenote-container .sidenote {
+  display: block;
+  text-indent: -4mm; 
+  padding-left: 4mm; 
+}
+
+
+.pagedjs_sidenote_call{
+  /* content: attr(data-counter-note); */
+  font-family: var(--footnote);
+  top: 1px;
+  position: relative;
+  line-height: 0;
+  padding-left: 0.2ch;
+  font-weight: var(--footnote-weight);
+  font-size: 0.6em !important;
+	vertical-align: super;
+}
+
+
+
+.pagedjs_sidenote_marker{
+  padding-right: 2mm; 
+
+    /* padding-right: 2ch; */
+}
