--- a/_11ty/assets/themes/creation_sitee/css/templates/toc-sommaire.css
+++ b/_11ty/assets/themes/creation_sitee/css/templates/toc-sommaire.css
@@ -4,7 +4,7 @@
 	display: flex;
 	justify-content: center;
 	height: calc(var(--pagedjs-pagebox-height) - var(--pagedjs-margin-bottom) - var(--pagedjs-margin-top));
-	font-family: 'Hershey-Futural-15';
+	/* font-family: 'Hershey-Futural-15'; */
 }
 
 .toc #nav-toc {
@@ -77,13 +77,3 @@
 .toc #list-toc-generated li:nth-last-of-type(3) {
 	margin-top: var(--gutter);
 }
-
-
-
-
-
-/* ────────────────────────────────────────
-   ↑ Le pseudo-sélecteur :nth-last-of-type(3) compte les éléments 
-   à partir de la fin de la liste, 
-   donc il ciblera le 3ème élément <li> en partant du dernier.
-   ──────────────────────────────────────── */
