--- a/_11ty/assets/themes/creation_sitee/css/print/base.css
+++ b/_11ty/assets/themes/creation_sitee/css/print/base.css
@@ -46,7 +46,7 @@ html {
 section:not(.textCol):not([data-template="textCol"]):not(.colloque) {
   display: block;
   padding: 0;
-  /* height: calc(var(--pagedjs-pagebox-height) - var(--pagedjs-margin-bottom) - var(--pagedjs-margin-top) ); */
+  height: calc(var(--pagedjs-pagebox-height) - var(--pagedjs-margin-bottom) - var(--pagedjs-margin-top) );
 }
 
 section p {
