--- a/_11ty/csspageweaver/plugins/layout/layout.css
+++ b/_11ty/csspageweaver/plugins/layout/layout.css
@@ -222,9 +222,10 @@
 
   [data-template="modularGrid"],
   .modularGrid {
-    page: modularGrid;
+    page: modularGrid !important;
 
-    page-break-before: always;
+  /* page-break-before: always !important; */
+  /* page-break-after: always !important; */
 
     --g-column-count: var(--grid-col, 12);
     --g-column-gutter: var(--grid-col-gutter, 0mm);
@@ -236,11 +237,7 @@
     grid-template-rows: repeat(var(--g-row-count), 1fr);
     column-gap: var(--g-column-gutter);
     row-gap: var(--g-row-gutter);
-    height: calc(
-      var(--pagedjs-height) - var(--pagedjs-margin-top) -
-        var(--pagedjs-margin-bottom) - var(--pagedjs-bleed-top) -
-        var(--pagedjs-bleed-bottom)
-    );
+    height: calc(var(--pagedjs-height) - var(--pagedjs-margin-top) - var(--pagedjs-margin-bottom) - var(--pagedjs-bleed-top) - var(--pagedjs-bleed-bottom) );
     min-height: 0;
     padding-top: 0;
     padding-bottom: 0;
