--- a/_11ty/csspageweaver/plugins/layout/layout.css
+++ b/_11ty/csspageweaver/plugins/layout/layout.css
@@ -224,8 +224,8 @@
   .modularGrid {
     page: modularGrid !important;
 
-  /* page-break-before: always !important; */
-  /* page-break-after: always !important; */
+  page-break-before: always !important;
+  page-break-after: always !important;
 
     --g-column-count: var(--grid-col, 12);
     --g-column-gutter: var(--grid-col-gutter, 0mm);
@@ -254,10 +254,9 @@
     grid-column: var(--print-col, auto) / span var(--print-width, 12);
     grid-row: var(--print-row, auto) / span var(--print-height, 3);
     position: relative;
-    /* margin: 0; */
     padding: 0;
     width: 100%;
-    height: 100%;
+    height: auto; 
     display: flex;
     justify-content: var(--align-self, flex-start);
     max-width: unset;
