--- a/_11ty/assets/themes/creation_sitee/css/print/base.css
+++ b/_11ty/assets/themes/creation_sitee/css/print/base.css
@@ -43,10 +43,9 @@ html {
   scroll-behavior: smooth;
 }
 
-section:not(.textCol):not([data-template="textCol"]):not(.colloque) {
-  display: block;
-  padding: 0;
-  height: calc(var(--pagedjs-pagebox-height) - var(--pagedjs-margin-bottom) - var(--pagedjs-margin-top) );
+section:not(.colloque) {
+
+  /* height: calc(var(--pagedjs-pagebox-height) - var(--pagedjs-margin-bottom) - var(--pagedjs-margin-top) ); */
 }
 
 section p {
