--- a/_11ty/assets/themes/creation_sitee/css/templates/fauxtitre.css
+++ b/_11ty/assets/themes/creation_sitee/css/templates/fauxtitre.css
@@ -27,7 +27,7 @@
 }
 
 .fauxtitre  {
-    page: fauxtitre;
+    /* page: fauxtitre; */
 	/* ────────────────────────────────────────
 	   Associe cette classe au modèle @page "fauxtitre"
 	   
