--- a/_11ty/assets/themes/creation_sitee/css/print/base.css
+++ b/_11ty/assets/themes/creation_sitee/css/print/base.css
@@ -78,12 +78,13 @@ section:not(.colloque) {
 section  p {
   widows: 3;
   orphans: 3;
-  text-indent: var(--alinea);
-  hyphens: auto !important;
-  hyphenate-limit-chars: 6 3 3;
-  /* line-height: var(--labeur-line-height); */
 
-  
+  text-indent: var(--alinea);
+  hyphens: manual;
+  /* hyphenate-limit-chars: 6 3 3; */
+  /* line-height: var(--labeur-line-height); */
+  --line-width: 409.312px;
+
 }
 
 
